fix(forms *): align items to the center of the page (thank you page)

--- a/src/app/form-ge-embedded/form-ge-embedded.component.scss
+++ b/src/app/form-ge-embedded/form-ge-embedded.component.scss
@@ -21,7 +21,7 @@
     width: 100% !important;
     height: 100% !important;
     display:flex;
-    flex-start: center;
+    align-items: center;
     justify-content : center;
     overflow-y: auto;
 }
