--- a/src/app/form-gv-embedded/form-gv-embedded.component.scss
+++ b/src/app/form-gv-embedded/form-gv-embedded.component.scss
@@ -34,7 +34,7 @@
     width: 100% !important;
     height: 100% !important;
     display: flex;
-    flex-start: center;
+    align-items: center;
     justify-content: center;
     overflow-y: auto;
 }
